--- a/index.html
+++ b/index.html
@@ -1,12 +1,215 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>my-project</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset=utf-8>
+  <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+  <meta name=renderer content=webkit>
+  <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no,maximum-scale=1,user-scalable=no">
+  <meta name=format-detection content="telephone=no">
+  <meta name=format-detection content="email=no">
+  <meta name=format-detection content="address=no;">
+  <meta name=apple-mobile-web-app-capable content=yes>
+  <meta name=apple-mobile-web-app-status-bar-style content=default>
+  <title>英才反馈意见发布页</title>
+  <script>
+    ! function() {
+      var e =
+        "@charset \"utf-8\";html{color:#000;background:#fff;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html *{outline:0;-webkit-text-size-adjust:none;-webkit-tap-highlight-color:rgba(0,0,0,0)}html,body{font-family:sans-serif}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{margin:0;padding:0}input,select,textarea{font-size:100%}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}abbr,acronym{border:0;font-variant:normal}del{text-decoration:line-through}address,caption,cite,code,dfn,em,th,var{font-style:normal;font-weight:500}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:500}q:before,q:after{content:''}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}a:hover{text-decoration:underline}ins,a{text-decoration:none}",
+        d = document.createElement("style");
+      if (document.getElementsByTagName("head")[0].appendChild(d), d.styleSheet) {
+        d.styleSheet.disabled || (d.styleSheet.cssText = e)
+      } else {
+        try {
+          d.innerHTML = e
+        } catch (f) {
+          d.innerText = e
+        }
+      }
+    }();
+  </script>
+  <script>
+    ! function(N, M) {
+      function L() {
+        var a = I.getBoundingClientRect().width;
+        a / F > 540 && (a = 540 * F);
+        var d = a / 10;
+        I.style.fontSize = d + "px", D.rem = N.rem = d
+      }
+      var K, J = N.document,
+        I = J.documentElement,
+        H = J.querySelector('meta[name="viewport"]'),
+        G = J.querySelector('meta[name="flexible"]'),
+        F = 0,
+        E = 0,
+        D = M.flexible || (M.flexible = {});
+      if (H) {
+        console.warn("将根据已有的meta标签来设置缩放比例");
+        var C = H.getAttribute("content").match(/initial\-scale=([\d\.]+)/);
+        C && (E = parseFloat(C[1]), F = parseInt(1 / E))
+      } else {
+        if (G) {
+          var B = G.getAttribute("content");
+          if (B) {
+            var A = B.match(/initial\-dpr=([\d\.]+)/),
+              z = B.match(/maximum\-dpr=([\d\.]+)/);
+            A && (F = parseFloat(A[1]), E = parseFloat((1 / F).toFixed(2))), z && (F = parseFloat(z[1]), E = parseFloat((1 /
+              F).toFixed(2)))
+          }
+        }
+      }
+      if (!F && !E) {
+        var y = N.navigator.userAgent,
+          x = (!!y.match(/android/gi), !!y.match(/iphone/gi)),
+          w = x && !!y.match(/OS 9_3/),
+          v = N.devicePixelRatio;
+        F = x && !w ? v >= 3 && (!F || F >= 3) ? 3 : v >= 2 && (!F || F >= 2) ? 2 : 1 : 1, E = 1 / F
+      }
+      if (I.setAttribute("data-dpr", F), !H) {
+        if (H = J.createElement("meta"), H.setAttribute("name", "viewport"), H.setAttribute("content", "initial-scale=" + E +
+            ", maximum-scale=" + E + ", minimum-scale=" + E + ", user-scalable=no"), I.firstElementChild) {
+          I.firstElementChild.appendChild(H)
+        } else {
+          var u = J.createElement("div");
+          u.appendChild(H), J.write(u.innerHTML)
+        }
+      }
+      N.addEventListener("resize", function() {
+        clearTimeout(K), K = setTimeout(L, 300)
+      }, !1), N.addEventListener("pageshow", function(b) {
+        b.persisted && (clearTimeout(K), K = setTimeout(L, 300))
+      }, !1), "complete" === J.readyState ? J.body.style.fontSize = 12 * F + "px" : J.addEventListener("DOMContentLoaded",
+        function() {
+          J.body.style.fontSize = 12 * F + "px"
+        }, !1), L(), D.dpr = N.dpr = F, D.refreshRem = L, D.rem2px = function(d) {
+        var c = parseFloat(d) * this.rem;
+        return "string" == typeof d && d.match(/rem$/) && (c += "px"), c
+      }, D.px2rem = function(d) {
+        var c = parseFloat(d) / this.rem;
+        return "string" == typeof d && d.match(/px$/) && (c += "rem"), c
+      }
+    }(window, window.lib || (window.lib = {}));
+  </script>
+  <script type=text/javascript>
+    var version = new Date().getTime();
+    console.log(version);
+  </script>
+  <style>
+    .loadingbox {
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      display: inline-block;
+      width: 100px;
+      height: 50px;
+      border-radius: 3px;
+      font-size: 30px;
+      color: rgba(200, 200, 200, 0.5);
+      padding: 1em;
+      margin-bottom: .25em;
+      vertical-align: top;
+      -webkit-transition: .3s color, .3s border;
+      transition: .3s color, .3s border;
+      text-align: center
+    }
+
+    .loadingbox:hover {
+      color: #d60b52;
+      font-size: 0;
+      padding: 0;
+      border-width: 3px;
+      /* line-height: 200px; */
+    }
+
+    .loadingbox:hover [class*="loader-"] {
+      font-size: 30px;
+      /* line-height: 200px; */
+    }
+
+    [class*="loader-"] {
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      color: inherit;
+      vertical-align: middle;
+      pointer-events: none;
+    }
+
+    .loader-17 {
+      position: relative;
+      background-color: currentcolor;
+      border-radius: 50%;
+    }
+
+    .loader-17:after, .loader-17:before {
+      content: "";
+      position: absolute;
+      width: .25em;
+      height: .25em;
+      border-radius: 50%;
+      opacity: .8;
+    }
+
+    .loader-17:after {
+      left: -.5em;
+      top: -.25em;
+      background-color: currentcolor;
+      -webkit-transform-origin: .75em 1em;
+      transform-origin: .75em 1em;
+      -webkit-animation: loader-17 1s linear infinite;
+      animation: loader-17 1s linear infinite;
+      opacity: .6;
+    }
+
+    .loader-17:before {
+      left: -1.25em;
+      top: -.75em;
+      background-color: currentcolor;
+      -webkit-transform-origin: 1.5em 1em;
+      transform-origin: 1.5em 1em;
+      -webkit-animation: loader-17 2s linear infinite;
+      animation: loader-17 2s linear infinite;
+    }
+
+    @-webkit-keyframes loader-17 {
+      0% {
+        -webkit-transform: rotateZ(0deg) translate3d(0, 0, 0);
+        transform: rotateZ(0deg) translate3d(0, 0, 0);
+      }
+      100% {
+        -webkit-transform: rotateZ(360deg) translate3d(0, 0, 0);
+        transform: rotateZ(360deg) translate3d(0, 0, 0);
+      }
+    }
+
+    @keyframes loader-17 {
+      0% {
+        -webkit-transform: rotateZ(0deg) translate3d(0, 0, 0);
+        transform: rotateZ(0deg) translate3d(0, 0, 0);
+      }
+      100% {
+        -webkit-transform: rotateZ(360deg) translate3d(0, 0, 0);
+        transform: rotateZ(360deg) translate3d(0, 0, 0);
+      }
+    }
+
+    .loaderfont {
+      font-size: 14px;
+      text-align: center;
+      display: block;
+      width: 115px;
+      margin-top: 40px
+    }
+  </style>
+</head>
+
+<body>
+  <div id=app></div>
+  <div class="loadingbox" id="loadingbox">
+    <div class="loader-17"></div>
+    <div class="loaderfont">加载中。。。。</div>
+  </div>
+</body>
+
 </html>
